Agregando cambios visuales botones de compra

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
         "inputOption.activeBorder": "#848484",
         "keybindingLabel.foreground": "#cccccc",
         "menu.background": "#252525",
+        "menu.selectionBackground": "#767676",
         "notificationCenterHeader.background": "#1f1f1f",
         "notificationCenterHeader.foreground": "#cccccc",
         "notifications.background": "#1f1f1f",
@@ -93,6 +94,7 @@
         "tab.activeBackground": "#1f1f1f",
         "tab.activeBorderTop": "#767676",
         "tab.activeForeground": "#ffffff",
+        "tab.selectedBorderTop": "#a7a7a7",
         "tab.border": "#2b2b2b",
         "tab.hoverBackground": "#1f1f1f",
         "tab.inactiveBackground": "#181818",
@@ -127,6 +129,8 @@
         "menu.separatorBackground": "#454545",
         "menu.border": "#454545",
         "ports.iconRunningProcessForeground": "#828282",
+        "tab.selectedBackground": "#222222",
+        "tab.selectedForeground": "#ffffffa1",
         "tab.lastPinnedBorder": "#cccccc33",
         "list.activeSelectionIconForeground": "#ffffff",
         "terminal.inactiveSelectionBackground": "#3d3d3d",
